@@ -1,3 +1,12 @@
+2008-03-27  Alexander Larsson  <alexl@redhat.com>
+
+	Merge from trunk:
+
+	* glocalfile.c (g_local_file_move):
+	Return G_IO_ERROR_IS_DIRECTORY, not G_IO_ERROR_WOULD_MERGE when moving
+	file over directory. This is according to the docs and what the move via
+	copy+remove fallback does.
+
 2008-03-24  Tor Lillqvist  <tml@novell.com>
 
 	Merge from trunk:
